Fix teacher gap

--- a/styles/pages/About.module.scss
+++ b/styles/pages/About.module.scss
@@ -1,4 +1,54 @@
 @use "../variables.scss" as globalVars;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+  width: 80%;
+  min-height: 100rem;
+  color: globalVars.$black;
+  .hero {
+    flex-grow: 2;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    min-height: 10rem;
+    margin: 2rem 0;
+    font-family: globalVars.$serif;
+    .title {
+      padding: 0;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      text-shadow: 0px 2px 4px rgba(globalVars.$black, 0.25);
+      .subtitle {
+        font-weight: bold;
+        font-size: 1.5rem;
+        font-weight: normal;
+        &.right {
+          align-self: flex-end;
+        }
+      }
+      h1 {
+        padding: 0;
+        margin: 0;
+        font-weight: normal;
+        font-size: 2.8rem;
+      }
+    }
+  }
+  .content {
+    min-height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 8rem;
+  }
+}
 @media (min-width: globalVars.$breakpoint-pc) {
   .container {
     display: flex;
