--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -7,7 +7,7 @@
     align-items: center;
     padding: 0;
     width: 100%;
-    height: 30rem;
+    height: 100rem;
     .hero {
       position: relative;
       display: flex;
