--- a/styles/pages/Teachers.module.scss
+++ b/styles/pages/Teachers.module.scss
@@ -76,7 +76,7 @@
       align-items: center;
       width: 100%;
       position: relative;
-      height: 40%;
+      height: 60%;
       background: url("../../public/images/HÌNH\ TỪNG\ THẦY\ CÔ.png");
       background-size: auto;
       background-repeat: no-repeat;
@@ -96,7 +96,7 @@
           align-items: center;
           justify-items: center;
           grid-auto-rows: 32rem;
-          gap: 4rem;
+          gap: 16rem;
         }
       }
     }
@@ -199,7 +199,7 @@
             align-items: center;
             justify-items: center;
             grid-auto-rows: 32rem;
-            gap: 4rem;
+            gap: 8rem;
           }
         }
       }
